example-deployment/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-websockets
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - test-websockets.lab.djls.space
      secretName: test-websockets-tls
  rules:
    - host: test-websockets.lab.djls.space
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: chat-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-client
                port:
                  name: http
